--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "angular": "^1.5.6",
-    "angular-ui-router": "^0.3.1"
+    "angular-ui-router": "^0.3.1",
+    "angularfire": "^2.0.1"
   }
 }
