--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "angular": "^1.5.6",
     "angular-ui-router": "^0.3.1",
-    "angularfire": "^2.0.1"
+    "angularfire": "^2.0.1",
+    "bootstrap": "^3.3.6"
   }
 }
