--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular": "^1.5.6",
     "angular-ui-router": "^0.3.1",
     "angularfire": "^2.0.1",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "ng-file-upload": "^12.0.4"
   }
 }
