--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "lodash": "^4.13.1",
     "method-override": "^2.3.6",
     "morgan": "^1.7.0",
-    "path": "^0.12.7",
-    "serve-favicon": "^2.3.0"
+    "path": "^0.12.7"
   }
 }
