--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.15.1",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.4.2",
+    "elasticsearch": "^11.0.1",
     "express": "^4.13.4",
     "firebase": "^3.0.3",
     "lodash": "^4.13.1",
